tests/test_proof/bad/output/sat_solving.catala_en.Proof
[ERROR] [A.x10] This variable might return an empty error:
  --> tests/test_proof/bad/sat_solving.catala_en
   | 
15 |   context x10 content boolean
   |           ^^^
   + Test
Counterexample generation is disabled so none was generated.
